--- a/render.yaml
+++ b/render.yaml
@@ -19,10 +19,6 @@ services:
           name: helpdesk-redis
           type: redis
           property: connectionString
-      - key: SECRET_KEY
-        generateValue: true
-      - key: ALLOWED_HOSTS
-        value: yourrenderapp.onrender.com
       - key: CELERY_BROKER_URL
         fromService:
           name: helpdesk-redis
@@ -33,6 +29,14 @@ services:
           name: helpdesk-redis
           type: redis
           property: connectionString
+      - key: SECRET_KEY
+        generateValue: true
+      - key: ALLOWED_HOSTS
+        value: yourrenderapp.onrender.com
+      - key: DJANGO_ENV
+        value: prod
+      - key: DEBUG
+        value: "False"
 
   - type: worker
     name: helpdesk-celery
@@ -63,7 +67,9 @@ services:
           type: redis
           property: connectionString
       - key: SECRET_KEY
-        sync: helpdesk-web  # or set same value manually
+        value: ${SECRET_KEY}
+      - key: DJANGO_ENV
+        value: prod
 
   - type: worker
     name: helpdesk-beat
@@ -72,7 +78,31 @@ services:
     buildCommand: pip install -r requirements.txt
     startCommand: celery -A helpdesk_system beat --loglevel=info
     envVars:
-      (same as helpdesk-celery)
+      - key: DJANGO_SETTINGS_MODULE
+        value: helpdesk_system.settings.prod
+      - key: DATABASE_URL
+        fromDatabase:
+          name: helpdesk-postgres
+          property: connectionString
+      - key: REDIS_URL
+        fromService:
+          name: helpdesk-redis
+          type: redis
+          property: connectionString
+      - key: CELERY_BROKER_URL
+        fromService:
+          name: helpdesk-redis
+          type: redis
+          property: connectionString
+      - key: CELERY_RESULT_BACKEND
+        fromService:
+          name: helpdesk-redis
+          type: redis
+          property: connectionString
+      - key: SECRET_KEY
+        value: ${SECRET_KEY}
+      - key: DJANGO_ENV
+        value: prod
 
 databases:
   - name: helpdesk-postgres
